--- a/index.html
+++ b/index.html
@@ -1,1 +1,53 @@
-...
+<html>
+<head>
+  <link href="style.css" rel="stylesheet" type="text/css"/>
+<link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
+</head>
+<body>
+<div class="grad">
+
+
+<div class="head">
+This is a header 
+</div>
+
+<div class="spacer">
+
+</div>
+
+
+<div>
+<span class="material-symbols-outlined">
+sticky_note_2
+</span>
+</div>
+
+<div>
+<span class="material-symbols-outlined">
+badge
+</span>
+</div>
+
+<div class="topright">
+<span class="material-symbols-outlined">
+pets
+</span>
+</div>
+
+<div class="spacer">
+
+</div>
+<div class="boxholder">
+<div class="box1">
+</div>
+
+<div class="box2">
+</div>
+</div>
+
+
+</div>
+  <script src="script.js"></script>
+</body>
+
+</html>
