--- a/index.html
+++ b/index.html
@@ -1,5 +1,9 @@
-<html>
+<!DOCTYPE html>
+
+<html lang="en">
 <head>
+  <meta charset="UTF-8">
+  <title>Document</title>
   <link href="style.css" rel="stylesheet" type="text/css"/>
 <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@24,400,0,0" />
 </head>
