--- a/index.html
+++ b/index.html
@@ -58,14 +58,14 @@ PHOTOGRAPHY, TRAD ART, & CROCHET
  </div>
 </div>
 
-<div id="divvy5" style="display:block">
+<div id="divvy5" style="display:none">
  <div class="box pink">
  <div class="pink1"> this is a rotated div </div>
  <!-- RED-DIV1 -->
  </div>
 </div>
 
-<div id="divvy6" style="display:block">
+<div id="divvy6" style="display:none">
  <div class="box purple">
  <div class="purple1"> this is a rotated div</div>
  <!-- RED-DIV1 -->
