--- a/index.html
+++ b/index.html
@@ -73,7 +73,7 @@ PHOTOGRAPHY, TRAD ART, & CROCHET
 </div>
 </div>
 
-<script scr="script.js"></script>
+<script src="script.js"></script>
   
 </body>
 
