--- a/index.html
+++ b/index.html
@@ -1,80 +1,107 @@
 <!DOCTYPE html>
 
 <html lang="en">
-<head>
-  <meta charset="UTF-8">
-  <title>Document</title>
-  <link href="style.css" rel="stylesheet" type="text/css"/>
+  <head>
+    <meta charset="UTF-8" />
+    <title>Document</title>
+    <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
-<body>
+  <body>
+    <script scr="script.js"></script>
 
+    <div class="whole">
+      <div class="header">
+        <h2>Kat's Art Showcase</h2>
+      </div>
 
-<div class="whole">
+      <div class="buttons">
+        <button onclick="showit('divvy1')">Home</button>
+        <button onclick="showit('divvy2')">About Me</button>
+        <button onclick="showit('divvy3')">Contact</button>
+        <button onclick="showit('divvy4')">Trad Art</button>
+        <button onclick="showit('divvy5')">Crochet</button>
+        <button onclick="showit('divvy6')">Photos</button>
+      </div>
+      <br />
 
+      <div id="divvy1" style="display: block">
+        <div class="box red">
+          <div class="red1">
+            <h3>PHOTOGRAPHY, TRAD ART, & CROCHET</h3>
+            <!-- Slideshow container -->
+            <div class="slideshow-container">
+              <!-- Full-width images with number and caption text -->
+              <div class="mySlides fade">
+                <div class="numbertext">1 / 3</div>
+                <img src="img1.jpg" style="width: 100%" />
+                <div class="text">Caption Text</div>
+              </div>
 
-<div class="header">
-<h2> Kat's Art Showcase </h2>
+              <div class="mySlides fade">
+                <div class="numbertext">2 / 3</div>
+                <img src="img2.jpg" style="width: 100%" />
+                <div class="text">Caption Two</div>
+              </div>
 
-</div>
+              <div class="mySlides fade">
+                <div class="numbertext">3 / 3</div>
+                <img src="img3.jpg" style="width: 100%" />
+                <div class="text">Caption Three</div>
+              </div>
 
-<div class="buttons">
- <button onclick="showit('divvy1')">Home</button>
- <button onclick="showit('divvy2')">About Me</button>
- <button onclick="showit('divvy3')">Contact</button>
- <button onclick="showit('divvy4')">Trad Art</button>
- <button onclick="showit('divvy5')">Crochet</button>
- <button onclick="showit('divvy6')">Photos</button>
-</div>
-<br>
+              <!-- Next and previous buttons -->
+              <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
+              <a class="next" onclick="plusSlides(1)">&#10095;</a>
+            </div>
+            <br />
 
-<div id="divvy1" style="display:block">
- <div class="box red">
- <div class="red1"> <h3>
-PHOTOGRAPHY, TRAD ART, & CROCHET
- </h3> </div>
- <!-- RED-DIV1 -->
- </div>
-</div>
+            <!-- The dots/circles -->
+            <div style="text-align: center">
+              <span class="dot" onclick="currentSlide(1)"></span>
+              <span class="dot" onclick="currentSlide(2)"></span>
+              <span class="dot" onclick="currentSlide(3)"></span>
+            </div>
+          </div>
+          <!-- RED-DIV1 -->
+        </div>
+      </div>
 
-<div id="divvy2" style="display:none">
- <div class="box blue">
- <div class="blue1"> this is a rotated div</div>
- <!-- RED-DIV1 -->
- <div>Hello</div>
- </div>
-</div>
+      <div id="divvy2" style="display: none">
+        <div class="box blue">
+          <div class="blue1">this is a rotated div</div>
+          <!-- RED-DIV1 -->
+          <div>Hello</div>
+        </div>
+      </div>
 
-<div id="divvy3" style="display:none">
- <div class="box yellow">
- <div class="yellow1"> this is a rotated div</div>
- <!-- RED-DIV1 -->
- </div>
-</div>
+      <div id="divvy3" style="display: none">
+        <div class="box yellow">
+          <div class="yellow1">this is a rotated div</div>
+          <!-- RED-DIV1 -->
+        </div>
+      </div>
 
-<div id="divvy4" style="display:none">
- <div class="box green">
- <div class="green1"> this is a rotated div</div>
- <!-- RED-DIV1 -->
- </div>
-</div>
+      <div id="divvy4" style="display: none">
+        <div class="box green">
+          <div class="green1">this is a rotated div</div>
+          <!-- RED-DIV1 -->
+        </div>
+      </div>
 
-<div id="divvy5" style="display:none">
- <div class="box pink">
- <div class="pink1"> this is a rotated div </div>
- <!-- RED-DIV1 -->
- </div>
-</div>
+      <div id="divvy5" style="display: block">
+        <div class="box pink">
+          <div class="pink1">this is a rotated div</div>
+          <!-- RED-DIV1 -->
+        </div>
+      </div>
 
-<div id="divvy6" style="display:none">
- <div class="box purple">
- <div class="purple1"> this is a rotated div</div>
- <!-- RED-DIV1 -->
- </div>
-</div>
-</div>
-
-<script src="script.js"></script>
-  
-</body>
-
+      <div id="divvy6" style="display: block">
+        <div class="box purple">
+          <div class="purple1">this is a rotated div</div>
+          <!-- RED-DIV1 -->
+        </div>
+      </div>
+    </div>
+    <script src="script.js"></script>
+  </body>
 </html>
