--- a/index.html
+++ b/index.html
@@ -33,19 +33,31 @@
               <!-- Full-width images with number and caption text -->
               <div class="mySlides fade">
                 <div class="numbertext">1 / 3</div>
-                <img src="img1.jpg" style="width: 100%" />
+                <img src="Omen.jpg" style="width: 100%" />
                 <div class="text">Caption Text</div>
               </div>
 
               <div class="mySlides fade">
                 <div class="numbertext">2 / 3</div>
-                <img src="img2.jpg" style="width: 100%" />
+                <img src="Lioness.jpg" style="width: 100%" />
                 <div class="text">Caption Two</div>
               </div>
 
               <div class="mySlides fade">
                 <div class="numbertext">3 / 3</div>
-                <img src="img3.jpg" style="width: 100%" />
+                <img src="Jeanflower.jpg" style="width: 100%" />
+                <div class="text">Caption Three</div>
+              </div>
+
+              <div class="mySlides fade">
+                <div class="numbertext">3 / 3</div>
+                <img src="Jeanflower.jpg" style="width: 100%" />
+                <div class="text">Caption Three</div>
+              </div>
+
+              <div class="mySlides fade">
+                <div class="numbertext">4 / 4</div>
+                <img src="Lookingjaguar.jpg" style="width: 100%" />
                 <div class="text">Caption Three</div>
               </div>
 
