--- a/index.html
+++ b/index.html
@@ -7,7 +7,6 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <script scr="script.js"></script>
 
     <div class="whole">
       <div class="header">
@@ -32,33 +31,33 @@
             <div class="slideshow-container">
               <!-- Full-width images with number and caption text -->
               <div class="mySlides fade">
-                <div class="numbertext">1 / 3</div>
+                <div class="numbertext">1 / 5</div>
                 <img src="Omen.jpg" style="width: 100%" />
                 <div class="text">Caption Text</div>
               </div>
 
               <div class="mySlides fade">
-                <div class="numbertext">2 / 3</div>
+                <div class="numbertext">2 / 5</div>
                 <img src="Lioness.jpg" style="width: 100%" />
                 <div class="text">Caption Two</div>
               </div>
 
               <div class="mySlides fade">
-                <div class="numbertext">3 / 3</div>
+                <div class="numbertext">3 / 5</div>
                 <img src="Jeanflower.jpg" style="width: 100%" />
                 <div class="text">Caption Three</div>
               </div>
 
               <div class="mySlides fade">
-                <div class="numbertext">3 / 3</div>
+                <div class="numbertext">4 / 3</div>
                 <img src="Jeanflower.jpg" style="width: 100%" />
-                <div class="text">Caption Three</div>
+                <div class="text">Caption Four</div>
               </div>
 
               <div class="mySlides fade">
-                <div class="numbertext">4 / 4</div>
+                <div class="numbertext">5 / 5</div>
                 <img src="Lookingjaguar.jpg" style="width: 100%" />
-                <div class="text">Caption Three</div>
+                <div class="text">Caption Five</div>
               </div>
 
               <!-- Next and previous buttons -->
@@ -100,14 +99,14 @@
         </div>
       </div>
 
-      <div id="divvy5" style="display: block">
+      <div id="divvy5" style="display: none">
         <div class="box pink">
           <div class="pink1">this is a rotated div</div>
           <!-- RED-DIV1 -->
         </div>
       </div>
 
-      <div id="divvy6" style="display: block">
+      <div id="divvy6" style="display: none">
         <div class="box purple">
           <div class="purple1">this is a rotated div</div>
           <!-- RED-DIV1 -->
