--- a/index.html
+++ b/index.html
@@ -10,7 +10,9 @@
 
     <div class="whole">
       <div class="header">
+      <div class="topright" onclick="window.open('https://kraten06.github.io/','mywindow');" style="cursor: pointer;">
         <h2>Kat's Art Showcase</h2>
+        </div>
       </div>
 
       <div class="buttons">
@@ -50,7 +52,7 @@
 
               <div class="mySlides fade">
                 <div class="numbertext">4 / 3</div>
-                <img src="Jeanflower.jpg" style="width: 100%" />
+                <img src="Destiny.jpg" style="width: 100%" />
                 <div class="text">Caption Four</div>
               </div>
 
@@ -71,6 +73,8 @@
               <span class="dot" onclick="currentSlide(1)"></span>
               <span class="dot" onclick="currentSlide(2)"></span>
               <span class="dot" onclick="currentSlide(3)"></span>
+              <span class="dot" onclick="currentSlide(4)"></span>
+              <span class="dot" onclick="currentSlide(5)"></span>
             </div>
           </div>
           <!-- RED-DIV1 -->
@@ -79,15 +83,22 @@
 
       <div id="divvy2" style="display: none">
         <div class="box blue">
-          <div class="blue1">this is a rotated div</div>
+          <div class="blue1">
+          <div class="photo"></div>
+          <div class="Aboutme">My name is Kathrynne Aten, or Kat. I am a freshman in college at SVU. I have done traditional art since I was little. It is not the medium I am most confident it. I learned how to crochet about a year or two ago. I picked it up and haven't looked back. I enjoy doing little animals but I have done a blanket and granny squares. i can make almost eveverything you ask as long as I have a pattern. Photography was a hobbie I picked up when I got my first phone. I fell in love with it and have taken a class or twon on it. I am mostly self taught and really enjoy it. </div>
+          </div>
           <!-- RED-DIV1 -->
-          <div>Hello</div>
+          
         </div>
       </div>
 
       <div id="divvy3" style="display: none">
         <div class="box yellow">
-          <div class="yellow1">this is a rotated div</div>
+        <div class="contact"><h3>Contact me at: </h3></div>
+          <div class="yellow1">
+            Phone number: 999.999.9999
+            Email: notarealemail@svu.edu
+          </div>
           <!-- RED-DIV1 -->
         </div>
       </div>
