--- a/index.html
+++ b/index.html
@@ -35,48 +35,48 @@
               <div class="mySlides fade">
                 <div class="numbertext">1 / 5</div>
                 <img src="Omen.jpg" style="width: 100%" />
-                <div class="text">Caption Text</div>
+                <!--<div class="text">Caption Text</div> -->
               </div>
 
               <div class="mySlides fade">
                 <div class="numbertext">2 / 5</div>
                 <img src="Lioness.jpg" style="width: 100%" />
-                <div class="text">Caption Two</div>
+                <!--<div class="text">Caption Two</div>-->
               </div>
 
               <div class="mySlides fade">
                 <div class="numbertext">3 / 5</div>
                 <img src="Jeanflower.jpg" style="width: 100%" />
-                <div class="text">Caption Three</div>
+                <!--<div class="text">Caption Three</div>-->
               </div>
 
               <div class="mySlides fade">
-                <div class="numbertext">4 / 3</div>
+                <div class="numbertext">4 / 5</div>
                 <img src="Destiny.jpg" style="width: 100%" />
-                <div class="text">Caption Four</div>
+                <!--<div class="text">Caption Four</div>-->
               </div>
 
               <div class="mySlides fade">
                 <div class="numbertext">5 / 5</div>
                 <img src="Lookingjaguar.jpg" style="width: 100%" />
-                <div class="text">Caption Five</div>
+                <!--<div class="text">Caption Five</div>-->
               </div>
 
-              <!-- Next and previous buttons -->
+              <!-- Next and previous buttons 
               <a class="prev" onclick="plusSlides(-1)">&#10094;</a>
               <a class="next" onclick="plusSlides(1)">&#10095;</a>
             </div>
             <br />
 
-            <!-- The dots/circles -->
+             The dots/circles 
             <div style="text-align: center">
               <span class="dot" onclick="currentSlide(1)"></span>
               <span class="dot" onclick="currentSlide(2)"></span>
               <span class="dot" onclick="currentSlide(3)"></span>
               <span class="dot" onclick="currentSlide(4)"></span>
               <span class="dot" onclick="currentSlide(5)"></span>
-            </div>
-          </div>
+            </div> -->
+          </div> 
           <!-- RED-DIV1 -->
         </div>
       </div>
