--- a/index.html
+++ b/index.html
@@ -34,25 +34,25 @@
               <!-- Full-width images with number and caption text -->
               <div class="mySlides fade">
                 <div class="numbertext">1 / 5</div>
-                <img src="Omen.jpg" style="width: 100%" />
+                <img src="Omen.jpg" />
                 <!--<div class="text">Caption Text</div> -->
               </div>
 
               <div class="mySlides fade">
                 <div class="numbertext">2 / 5</div>
-                <img src="Lioness.jpg" style="width: 100%" />
+                <img src="Lioness.jpg" />
                 <!--<div class="text">Caption Two</div>-->
               </div>
 
               <div class="mySlides fade">
                 <div class="numbertext">3 / 5</div>
-                <img src="Jeanflower.jpg" style="width: 100%" />
+                <img src="Jeanflower.jpg" />
                 <!--<div class="text">Caption Three</div>-->
               </div>
 
               <div class="mySlides fade">
                 <div class="numbertext">4 / 5</div>
-                <img src="Destiny.jpg" style="width: 100%" />
+                <img src="Destiny.jpg" />
                 <!--<div class="text">Caption Four</div>-->
               </div>
 
@@ -79,6 +79,7 @@
           </div> 
           <!-- RED-DIV1 -->
         </div>
+      </div>
       </div>
 
       <div id="divvy2" style="display: none">
