--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
               <span class="dot" onclick="currentSlide(2)"></span>
               <span class="dot" onclick="currentSlide(3)"></span>
               <span class="dot" onclick="currentSlide(4)"></span>
-              <span class="dot" onclick="currentSlide(5)"></span>
-            </div> -->
+              <span class="dot" onclick="currentSlide(5)"></span>  -->
+            </div>
           </div> 
           <!-- RED-DIV1 -->
         </div>
