--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8" />
     <title>Art Showcase</title>
     <link href="style.css" rel="stylesheet" type="text/css" />
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=local_florist" />
   </head>
   <body>
 
@@ -13,6 +14,9 @@
       <div class="topright" onclick="window.open('https://kraten06.github.io/','mywindow');" style="cursor: pointer;">
         <h2>Kat's Art Showcase</h2>
         </div>
+        <div class="icon"><span class="material-symbols-outlined">
+local_florist
+</span></div>
       </div>
 
       <div class="buttons">
