--- a/index.html
+++ b/index.html
@@ -128,7 +128,14 @@ local_florist
 
       <div id="divvy5" style="display: none">
         <div class="box pink">
-          <div class="pink1">this is a rotated div</div>
+          <div class="pink1">
+            <div class="p2"><img src="Jillbeanie.jpg">
+            <div class="p2"><img src="Crown.jpg">
+            <div class="p2"><img src="TURTLES.jpg">
+            <div class="p2"><img src="Catbeaine.jpg">
+            <div class="p2"><img src="Rose.jpg">
+            <div class="p2"><img src="Stacybeanie.jpg">
+          </div>
           <!-- RED-DIV1 -->
         </div>
       </div>
@@ -137,12 +144,12 @@ local_florist
         <div class="box purple">
           <div class="purple1">
           <div class="p1"><img src="Destiny.jpg"></div>       
-          <div class="p2"><img src="BWSleeplion.jpeg"></div>
-          <div class="p3"><img src="Bird.jpeg"></div>
-          <div class="p3"><img src="Blossoms.jpeg"></div>
-          <div class="p4"><img src="Bigbird.jpeg"></div>
-          <div class="p5"><img src="Blueflower.jpeg"></div>
-          <div class="p6"><img src="Funkypurpleflower.jpeg"></div>
+          <div class="p2"><img src="BWSleepinglion.jpg"></div>
+          <div class="p3"><img src="Bird.jpg"></div>
+          <div class="p3"><img src="Blossoms.jpg"></div>
+          <div class="p4"><img src="Bigbird.jpg"></div>
+          <div class="p5"><img src="Blueflower.jpg"></div>
+          <div class="p6"><img src="Funkypurpleflower.jpg"></div>
           <div class="p7"><img src="Coyote.jpeg"></div>
           <div class="p7"><img src="Deadlion.jpg"></div>
           
