--- a/index.html
+++ b/index.html
@@ -129,12 +129,12 @@ local_florist
       <div id="divvy5" style="display: none">
         <div class="box pink">
           <div class="pink1">
-          <div class="p2"><img src="Jillbeanie.jpg"></div>
-          <div class="p2"><img src="Crown.jpg"></div>
-          <div class="p2"><img src="TURTLES.jpg"></div>
-          <div class="p2"><img src="Catbeaine.jpg"></div>
-          <div class="p2"><img src="Rose.jpg"></div>
-          <div class="p2"><img src="Stacybeanie.jpg"></div>
+          <div class="p2"><img src="Jillbeanie.jpeg"></div>
+          <div class="p2"><img src="Crown.jpeg"></div>
+          <div class="p2"><img src="TURTLES.jpeg"></div>
+          <div class="p2"><img src="Catbeaine.jpeg"></div>
+          <div class="p2"><img src="Rose.jpeg"></div>
+          <div class="p2"><img src="Stacybeanie.jpeg"></div>
           </div>
           <!-- RED-DIV1 -->
         </div>
