--- a/index.html
+++ b/index.html
@@ -132,9 +132,9 @@ local_florist
           <div class="p2"><img src="Jillbeanie.jpeg"></div>
           <div class="p2"><img src="Crown.jpeg"></div>
           <div class="p2"><img src="TURTLES.jpeg"></div>
-          <div class="p2"><img src="Catbeaine.jpeg"></div>
+          <div class="p2"><img src="Catbeanie.jpeg"></div>
           <div class="p2"><img src="Rose.jpeg"></div>
-          <div class="p2"><img src="Stacybeanie.jpeg"></div>
+          <div class="p2"><img src="Stacybeaine.jpeg"></div>
           </div>
           <!-- RED-DIV1 -->
         </div>
