--- a/index.html
+++ b/index.html
@@ -145,12 +145,12 @@ local_florist
           <div class="purple1">
           <div class="p1"><img src="Destiny.jpg"></div>       
           <div class="p2"><img src="BWSleeplion.jpeg"></div>
-          <div class="p3"><img src="Bird.jpeg"></div>
-          <div class="p3"><img src="Blossoms.jpeg"></div>
+          <div class="p3"><img src="Lakeflower.jpeg"></div>
+          <div class="p3"><img src="Pond.jpg"></div>
           <div class="p4"><img src="Bigbird.jpeg"></div>
           <div class="p5"><img src="Blueflower.jpeg"></div>
-          <div class="p6"><img src="Funkypurpleflower.jpeg"></div>
-          <div class="p7"><img src="Coyote.jpeg"></div>
+          <div class="p6"><img src="Prettywater.jpeg"></div>
+          <div class="p7"><img src="Purpleflower.jpg"></div>
           <div class="p7"><img src="Deadlion.jpg"></div>
           
           </div>
