--- a/index.html
+++ b/index.html
@@ -127,6 +127,7 @@ local_florist
             <div class="p2"><img src="fISH.jpeg"></div>
             <div class="p2"><img src="Gurl.jpeg"></div>
             <div class="p2"><img src="Girl.jpeg"></div>
+            <div class="p2"><img src="Girl again.jpeg"></div>
           </div>
           <!-- RED-DIV1 -->
         </div>
