--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
       <div class="topright" onclick="window.open('https://kraten06.github.io/','mywindow');" style="cursor: pointer;">
         <h2>Kat's Art Showcase</h2>
         </div>
-        <div class="icon"><span class="material-symbols-outlined">
+        <div class="icon" onclick="window.open('https://photos.app.goo.gl/yEkmfmQ8RXy9wYCr9','mywindow');"><span class="material-symbols-outlined">
 local_florist
 </span></div>
       </div>
